--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "isbot": "^4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.10",
     "openai": "^4.57.0"
   },
   "devDependencies": {
@@ -43,6 +42,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.10",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "typescript": "^5.1.6",
     "vite": "^5.1.0"
   },
