--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "typescript": "^5.1.6",
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "engines": {
     "node": ">=18.0.0"
