--- a/package.json
+++ b/package.json
@@ -3,53 +3,140 @@
   "private": true,
   "sideEffects": false,
   "type": "module",
-  "version": "1.0.0",
-  "description": "GitMesh - The GitHub Project Combinator | Google-like search for GitHub with AI project combination",
+  "version": "2.0.0",
+  "description": "GitMesh 2.0 - Next-generation GitHub Project Combinator with AI-powered analysis and smart discovery",
   "scripts": {
     "build": "remix build",
     "dev": "remix dev --manual",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint . --fix",
+    "lint:check": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest",
+    "test:coverage": "vitest --coverage",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "prepare": "husky install",
+    "analyze": "npm run build && npx @next/bundle-analyzer",
+    "security:audit": "npm audit --audit-level=moderate",
+    "deps:update": "npx npm-check-updates -u",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
-    "@remix-run/node": "^2.12.0",
-    "@remix-run/react": "^2.12.0",
-    "@remix-run/serve": "^2.12.0",
-    "@octokit/rest": "^20.1.1",
-    "@headlessui/react": "^2.1.8",
+    "@remix-run/node": "^2.13.1",
+    "@remix-run/react": "^2.13.1",
+    "@remix-run/serve": "^2.13.1",
+    "@octokit/rest": "^21.0.2",
+    "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.1.5",
-    "framer-motion": "^11.5.4",
-    "zustand": "^4.5.5",
+    "framer-motion": "^11.11.7",
+    "zustand": "^5.0.0",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "isbot": "^4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "openai": "^4.57.0"
+    "date-fns": "^4.1.0",
+    "isbot": "^5.1.29",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "openai": "^4.69.0",
+    "@prisma/client": "^5.22.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.24.1",
+    "@hookform/resolvers": "^3.10.0",
+    "react-hook-form": "^7.54.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-button": "^1.1.1",
+    "@radix-ui/react-card": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-form": "^0.1.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "lucide-react": "^0.460.0",
+    "recharts": "^2.13.3",
+    "react-hot-toast": "^2.4.1",
+    "class-variance-authority": "^0.7.1",
+    "tailwind-merge": "^2.5.4",
+    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-virtual": "^3.10.8",
+    "react-intersection-observer": "^9.14.0",
+    "fuse.js": "^7.0.0",
+    "highlight.js": "^11.10.0",
+    "marked": "^14.1.3",
+    "dompurify": "^3.2.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.12.0",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.38.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.10",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "typescript": "^5.1.6",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.3.2"
+    "@remix-run/dev": "^2.13.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/dompurify": "^3.0.5",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.13.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10",
+    "vite-tsconfig-paths": "^5.1.2",
+    "vitest": "^2.1.4",
+    "@vitest/coverage-v8": "^2.1.4",
+    "jsdom": "^25.0.1",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.5.2",
+    "prisma": "^5.22.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "@next/bundle-analyzer": "^15.0.3",
+    "cross-env": "^7.0.3",
+    "concurrently": "^9.0.1",
+    "nodemon": "^3.1.7"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{css,md,json}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run typecheck && npm run test"
+    }
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
   }
 }
