Add comprehensive .env.example with all 2.0 configuration options

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,114 @@
-# GitHub API Configuration
+# GitMesh 2.0 Environment Configuration
+
+# GitHub API Configuration (Required)
 GITHUB_TOKEN=your_github_personal_access_token_here
+# Create a token at: https://github.com/settings/tokens
+# Required scopes: public_repo, read:org, read:user
 
-# OpenAI API (Optional - for AI-powered recommendations)
+# OpenAI API Configuration (Optional - for AI features)
 OPENAI_API_KEY=your_openai_api_key_here
+# Get your API key at: https://platform.openai.com/api-keys
+# Used for: Code analysis, compatibility scoring, merge suggestions
 
-# Database (Optional - for caching and user data)
-DATABASE_URL=your_database_url_here
+# Database Configuration (Optional)
+DATABASE_URL="file:./dev.db"
+# For production, use PostgreSQL:
+# DATABASE_URL="postgresql://username:password@localhost:5432/gitmesh"
 
-# Session Configuration
-SESSION_SECRET=your_session_secret_here
+# Redis Configuration (Optional - for caching)
+REDIS_URL=redis://localhost:6379
+# Used for: API response caching, rate limiting
 
-# Analytics (Optional)
-VERCEL_ANALYTICS_ID=your_vercel_analytics_id
-GOOGLE_ANALYTICS_ID=your_google_analytics_id
-
-# Rate Limiting
-REDIS_URL=your_redis_url_for_rate_limiting
-
-# Development
+# Application Configuration
 NODE_ENV=development
 PORT=3000
+
+# Security Configuration
+SESSION_SECRET=your_session_secret_here_generate_random_string
+JWT_SECRET=your_jwt_secret_here_generate_random_string
+
+# Rate Limiting Configuration
+RATE_LIMIT_WINDOW_MS=900000
+# 15 minutes in milliseconds
+RATE_LIMIT_MAX_REQUESTS=100
+# Maximum requests per window
+
+# GitHub API Rate Limiting
+GITHUB_RATE_LIMIT_BUFFER=100
+# Buffer to avoid hitting rate limits
+
+# AI Features Configuration
+AI_ANALYSIS_ENABLED=true
+AI_MERGE_SUGGESTIONS_ENABLED=true
+AI_QUALITY_SCORING_ENABLED=true
+
+# Analytics Configuration (Optional)
+ANALYTICS_ENABLED=false
+ANALYTICS_ID=
+# Google Analytics or similar service ID
+
+# Deployment Configuration
+VERCEL_URL=
+RAILWAY_STATIC_URL=
+NETLIFY_URL=
+
+# Development Configuration
+VITE_DEV_MODE=true
+VITE_API_BASE_URL=http://localhost:3000
+
+# Error Tracking (Optional)
+SENTRY_DSN=
+# Sentry DSN for error tracking in production
+
+# Email Configuration (Optional - for notifications)
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+FROM_EMAIL=noreply@gitmesh.dev
+
+# Webhook Configuration (Optional)
+WEBHOOK_SECRET=your_webhook_secret_here
+# For GitHub webhooks if implementing real-time updates
+
+# Feature Flags
+FEATURE_ADVANCED_SEARCH=true
+FEATURE_AI_INSIGHTS=true
+FEATURE_PROJECT_COMBINATOR=true
+FEATURE_TRENDING_ANALYSIS=true
+FEATURE_SECURITY_SCANNING=true
+
+# Cache Configuration
+CACHE_TTL=900
+# Cache time-to-live in seconds (15 minutes)
+CACHE_MAX_SIZE=100
+# Maximum number of cached items
+
+# Logging Configuration
+LOG_LEVEL=info
+# Options: error, warn, info, debug
+LOG_FORMAT=combined
+# Options: combined, common, dev, short, tiny
+
+# Performance Configuration
+MAX_CONCURRENT_REQUESTS=10
+# Maximum concurrent GitHub API requests
+REQUEST_TIMEOUT=30000
+# Request timeout in milliseconds
+
+# Search Configuration
+SEARCH_RESULTS_PER_PAGE=30
+MAX_SEARCH_PAGES=10
+SEARCH_CACHE_DURATION=300
+# Search cache duration in seconds
+
+# AI Model Configuration
+AI_MODEL_TEMPERATURE=0.1
+# Lower temperature for more consistent results
+AI_MAX_TOKENS=2000
+# Maximum tokens for AI responses
+
+# Security Headers
+SECURE_HEADERS_ENABLED=true
+CSP_ENABLED=true
+HSTS_ENABLED=true
